Fix three column newsletter signup spacing

--- a/foundation_cms/static/scss/blocks/themes/default/three_column_container_block.scss
+++ b/foundation_cms/static/scss/blocks/themes/default/three_column_container_block.scss
@@ -180,11 +180,13 @@
     &[data-layout="expand_on_focus"] {
       @include breakpoint(xlarge up) {
         display: block;
+        padding: 1.5rem 2rem 2rem;
       }
 
       .newsletter-signup__form {
         @include breakpoint(xlarge up) {
           flex-direction: column;
+          gap: 0.5rem;
         }
       }
     }
